fix gap

--- a/styles.css
+++ b/styles.css
@@ -142,7 +142,7 @@ main{
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 1.5em;
+    gap: 1.25em;
 }
 
 .social-btn {
